# pdfmuse

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  install-smoke.yml  parity.yml  release.yml
benches/: compare.py  corpus-manifest.txt  fetch_corpus.py  node_compare.js
bindings/node/: README.md  index.ts  package.json  tsconfig.json
bindings/python/pdfmuse/: __init__.py
crates/pdfmuse-cli/: Cargo.toml
crates/pdfmuse-cli/src/: main.rs
crates/pdfmuse-core/: Cargo.toml
crates/pdfmuse-core/benches/: parse.rs
crates/pdfmuse-core/examples/: gen_boilerplate_pdf.rs  gen_cjk_pdf.rs  gen_docx.rs  gen_encrypted_pdf.rs  gen_form_xobject_pdf.rs  gen_heading_pdf.rs  gen_hello_pdf.rs  gen_table_pdf.rs
crates/pdfmuse-core/src/: error.rs  ir.rs  lib.rs  profile.rs
crates/pdfmuse-core/src/backend/: mod.rs
crates/pdfmuse-core/src/docx/: document.rs  mod.rs  styles.rs
crates/pdfmuse-core/src/layout/: boilerplate.rs  columns.rs  headings.rs  lines.rs  mod.rs  paragraphs.rs  tables.rs
crates/pdfmuse-core/src/output/: chunk.rs  json.rs  markdown.rs  mod.rs
crates/pdfmuse-core/src/pdf/: cmap.rs  content.rs  content_lex.rs  fonts.rs  graphics.rs  lazy.rs  mod.rs  object_parser.rs  objects.rs
crates/pdfmuse-core/src/pdf/tables/: agl.rs  encodings.rs  metrics.rs  mod.rs
crates/pdfmuse-core/tests/: boilerplate.rs  cjk.rs  encryption.rs  form_xobject.rs  headings.rs  robustness.rs  smoke_corpus.rs  snapshots.rs
crates/pdfmuse-core/tests/snapshots/: snapshots__cjk.snap  snapshots__docx.snap  snapshots__docx_chunks.snap  snapshots__docx_md.snap  snapshots__hello.snap  snapshots__table.snap  snapshots__table_md.snap
crates/pdfmuse-node/: Cargo.toml  build.rs
crates/pdfmuse-node/src/: lib.rs
crates/pdfmuse-python/: Cargo.toml
crates/pdfmuse-python/src/: lib.rs
crates/pdfmuse-wasm/: Cargo.toml  README.md
crates/pdfmuse-wasm/.cargo/: config.toml
crates/pdfmuse-wasm/src/: lib.rs
docs/: index.html
docs/adr/: 0001-pdf-engine-strategy.md
examples/: visual_check.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
integrations/haystack-pdfmuse/: README.md  pyproject.toml
integrations/haystack-pdfmuse/pdfmuse_haystack/: __init__.py
integrations/langchain-pdfmuse/: README.md  pyproject.toml
integrations/langchain-pdfmuse/docs/: SUBMISSION.md  pdfmuse.mdx
integrations/langchain-pdfmuse/langchain_pdfmuse/: __init__.py
integrations/llama-index-pdfmuse/: README.md  pyproject.toml
integrations/llama-index-pdfmuse/llama_index/readers/pdfmuse/: __init__.py  base.py
tests/corpus/: sample.docx
tests/parity/: check.py  node_dump.js  wasm_dump.js
tests/python/: test_smoke.py
tools/gen_font_tables/: README.md  gen.py
