[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casperkwok/pdfmuse"
homepage = "https://github.com/casperkwok/pdfmuse"
authors = ["Casper Kwok"]

# Single source of truth for shared dependency versions.
# Members opt in via `dep.workspace = true` as they need them (see Linear PER-31/33/…).
[workspace.dependencies]
lopdf = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
zip = "2"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
