[workspace]
members = ["crates/*"]
# Plain `cargo build`/`test` targets only the pure-Rust crates. The binding
# crates (python/node/wasm) are cdylibs built by their packaging tools
# (maturin / napi / wasm-pack), which set the linker flags a plain `cargo build`
# does not — so they are excluded from the default set to keep `cargo build` green.
default-members = ["crates/pdfmuse-core", "crates/pdfmuse-cli"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casperkwok/pdfmuse"
homepage = "https://github.com/casperkwok/pdfmuse"
authors = ["Casper Kwok"]

# Single source of truth for shared dependency versions.
# Members opt in via `dep.workspace = true` as they need them (see Linear PER-31/33/…).
[workspace.dependencies]
lopdf = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
# default-features off drops the C codecs (bzip2/lzma/zstd) that can't target
# wasm32; DOCX only needs deflate. Keeps the core wasm-buildable.
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
rayon = "1"
unicode-normalization = "0.1"

[profile.release]
lto = true
codegen-units = 1
