[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pdfmuse"
description = "Deterministic PDF/DOCX parser for RAG — Rust core, Python & TS bindings"
requires-python = ">=3.8"
license = "MIT OR Apache-2.0"
dynamic = ["version"]
readme = "README.md"
keywords = ["pdf", "docx", "parser", "rag", "llm"]
classifiers = [
  "Topic :: Text Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
manifest-path = "crates/pdfmuse-python/Cargo.toml"
python-source = "bindings/python"   # pure-Python wrapper (types, dataclasses)
module-name = "pdfmuse._native"     # native module lives under the pdfmuse package
