[package]
name = "pdfmuse-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pdfmuse-core = { path = "../crates/pdfmuse-core" }

# Prevent this from being built as a normal workspace member.
[workspace]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
