[package]
name = "pdfmuse-cli"
description = "Debug CLI for pdfmuse — dump parsed IR as JSON/Markdown. See PER-44."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pdfmuse"
path = "src/main.rs"

[dependencies]
pdfmuse-core = { path = "../pdfmuse-core", features = ["rayon"] }
serde_json = { workspace = true }
