[package]
name = "pdfmuse-core"
description = "Deterministic PDF/DOCX parser core (pure Rust). The value core of pdfmuse."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
lopdf = { workspace = true }
# Added incrementally: quick-xml/zip (PER-52).

[dev-dependencies]
serde_json = { workspace = true }
insta = "1"
