[package]
name = "pdfmuse-core"
description = "Deterministic PDF/DOCX parser core (pure Rust). The value core of pdfmuse."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lopdf = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
insta = "1"
