[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-pdfmuse"
version = "0.1.0"
description = "LangChain document loader for pdfmuse — deterministic PDF/DOCX parsing for RAG."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
authors = [{ name = "Casper Kwok" }]
keywords = ["langchain", "pdf", "docx", "rag", "llm", "parser", "pdfmuse", "document-loader"]
dependencies = [
    "pdfmuse>=0.1.4",
    "langchain-core>=0.3",
]

[project.urls]
Homepage = "https://github.com/casperkwok/pdfmuse"
Repository = "https://github.com/casperkwok/pdfmuse"

[tool.hatch.build.targets.wheel]
packages = ["langchain_pdfmuse"]
